force-app/main/default/objects/Assessment_Criteria__c/Assessment_Criteria__c.object-meta.xml
<CustomObject>
    <label>Assessment Criteria</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessment Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>