force-app/main/default/objects/Assessment_Criteria__c/fields/Application_Round__c.field-meta.xml
<CustomField>
    <fullName>Application_Round__c</fullName>
    <label>Application Round</label>
    <referenceTo>Application_Round__c</referenceTo>
    <relationshipLabel>Assessment Criteria</relationshipLabel>
    <relationshipName>Assessment_Criteria</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>