force-app/main/default/objects/Assessment_Criteria__c/validationRules/Application_Round_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Application_Round_Closed</fullName>
    <active>true</active>
    <description>Application Round has been Closed</description>
    <errorConditionFormula>ISNEW() &amp;&amp;ISPICKVAL( Application_Round__r.Status__c,&quot;closed&quot;)</errorConditionFormula>
    <errorMessage>The Application Round has been Closed, Criteria can not be added.</errorMessage>
</ValidationRule>